# zeta4

./: .gitignore  README.md  deploy.py  rebuild.py  setup.sh
zetanetwork-node/: Cargo.toml
zetanetwork-node/src/: main.rs
zetanetwork-web/: app.py  index.html
